Updated layout and resolved duplicates in profile join events
The linear layouts in recycler_with_back.xml, event_organized.xml, and user_notification_list.xml have been replaced with optimized CardView and ConstraintLayout to improve UI design. Fixed the issue of duplicates in profile join events in SuccessfulCheckinActivity.java by refining the updateProfile method. Also, the button text in event_organized.xml has been changed to "Create New Event".

--- a/app/src/main/res/layout/event_organized.xml
+++ b/app/src/main/res/layout/event_organized.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:text="Organize"
+        android:text="Create New Event"
         app:icon="@drawable/add_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
