Update TextView styling in event layouts
Changes have been made to the TextView elements in the 'event_organized.xml' and 'event_explore.xml' layouts. The font family has been changed to 'aptos', the text size has been reduced to 24sp, and the text style has been set to bold. These changes are aimed at improving the readability and visual appeal of the event titles.

--- a/app/src/main/res/layout/event_organized.xml
+++ b/app/src/main/res/layout/event_organized.xml
@@ -7,16 +7,16 @@
 
     <!-- "Organized Events" TextView -->
     <TextView
-        android:id="@+id/textViewOpenEvents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/coustard"
-        android:padding="16dp"
-        android:text="Organized Events"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/textViewOpenEvents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/aptos"
+            android:padding="16dp"
+            android:text="Organized Events"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- List of Created Events -->
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
