--- a/app/src/main/res/layout/event_explore.xml
+++ b/app/src/main/res/layout/event_explore.xml
@@ -11,12 +11,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Open Events"
-            android:textSize="36sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="16dp"/>
+            android:padding="16dp" android:fontFamily="@font/aptos"/>
 
     <!-- RecyclerView to display events -->
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
