--- a/app/src/main/res/layout/view_milestones.xml
+++ b/app/src/main/res/layout/view_milestones.xml
@@ -11,7 +11,6 @@
         android:id="@+id/header_milestone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
         android:paddingTop="10dp"
         android:paddingBottom="70dp"
@@ -19,112 +18,178 @@
         android:textAlignment="center"
         android:textSize="60sp" />
 
-    <TextView
-        android:id="@+id/mile_signup"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="Someone is \nInterested"
-        android:textAlignment="center"
-        android:layout_above="@id/sign_up_icon"
-        android:textSize="30sp" />
+        android:layout_below="@+id/header_milestone"
+        android:orientation="vertical"
+        android:id="@+id/miles_list">
 
-    <ImageView
-        android:id="@+id/sign_up_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/sign_up_mile"
-        android:layout_above="@id/simpleProgressBar"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/mile_attendee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="First Check In"
-        android:textAlignment="center"
-        android:layout_below="@id/attendee_icon"
-        android:textSize="30sp" />
+            <ImageView
+                android:id="@+id/sign_up_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/sign_up_mile" />
+            <TextView
+                android:id="@+id/mile_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:text="Someone is Interested"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-    <ImageView
-        android:id="@+id/attendee_icon"
-        android:layout_width="90dp"
-        android:layout_height="112dp"
-        android:layout_below="@id/simpleProgressBar"
-        android:src="@drawable/attendee_mile" />
+            <ImageView
+                android:id="@+id/check_sign"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/anim_vector" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/mile_halfway"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="Halfway Checkpoint"
-        android:textAlignment="center"
-        android:layout_above="@id/halfway_icon"
-        android:textSize="30sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/halfway_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/halfway_mile"
-        android:layout_above="@id/simpleProgressBar"
-        />
+            <ImageView
+                android:id="@+id/attendee_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/attendee_mile" />
+            <TextView
+                android:id="@+id/mile_attendee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="First Check In"
+                android:paddingLeft="10dp"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/check_attendee"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/anim_vector" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/mile_full"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="Full Capacity"
-        android:textAlignment="center"
-        android:layout_below="@id/full_icon"
-        android:textSize="30sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/full_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/full_mile"
-        android:layout_below="@id/simpleProgressBar"
-        />
+            <ImageView
+                android:id="@+id/halfway_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/halfway_mile" />
 
-    <TextView
-        android:id="@+id/mile_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="Your Event Has Begun"
-        android:textAlignment="center"
-        android:layout_above="@id/start_icon"
-        android:textSize="30sp" />
+            <TextView
+                android:id="@+id/mile_halfway"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Halfway Checkpoint"
+                android:textAlignment="center"
+                android:paddingLeft="10dp"
+                android:textSize="20sp" />
 
-    <ImageView
-        android:id="@+id/start_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/event_mile"
-        android:layout_above="@id/simpleProgressBar"
-        />
+            <ImageView
+                android:id="@+id/check_halfway"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/anim_vector" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/full_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/full_mile" />
+
+            <TextView
+                android:id="@+id/mile_full"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Full Capacity"
+                android:paddingLeft="10dp"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/check_full"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/anim_vector" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/start_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/event_mile" />
+
+            <TextView
+                android:id="@+id/mile_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Your Event Has Begun"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/check_start"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/anim_vector" />
+        </LinearLayout>
+
+
+
+
+
+    </LinearLayout>
+
+
     <ProgressBar
         android:id="@+id/simpleProgressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:layout_centerInParent="true"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="-15dp"
+        android:layout_below="@id/miles_list"
         android:max="100"
         android:progress="0"
         android:progressDrawable="@drawable/path" />
